@@ -9,13 +9,14 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Thu Jul 14 14:17:17 CEST 2005
+ * Fri Jul 29 12:05:46 CEST 2005
  *
  *****************************************************************************/
 
 namespace Mono.Cecil.Metadata {
 
 	using System;
+	using IO = System.IO;
 	using System.Collections;
 
 	using Mono.Cecil.Binary;
@@ -24,11 +25,33 @@ namespace Mono.Cecil.Metadata {
 
 		private MetadataTableWriter m_mtwv;
 		private MetadataRoot m_metadataRoot;
+		private IO.BinaryWriter m_binaryWriter;
 
 		public MetadataRowWriter (MetadataTableWriter mtwv)
 		{
 			m_mtwv = mtwv;
 			m_metadataRoot = mtwv.GetMetadataRoot ();
+			m_binaryWriter = mtwv.GetWriter ();
+		}
+
+		public void WriteBlobPointer (uint pointer)
+		{
+		}
+
+		public void WriteStringPointer (uint pointer)
+		{
+		}
+
+		public void WriteGuidPointer (uint pointer)
+		{
+		}
+
+		public void WriteTablePointer (uint pointer, Type table)
+		{
+		}
+
+		public void WriteMetadataToken (MetadataToken token, CodedIndex ci)
+		{
 		}
 
 		public AssemblyRow CreateAssemblyRow (AssemblyHashAlgorithm _hashAlgId, ushort _majorVersion, ushort _minorVersion, ushort _buildNumber, ushort _revisionNumber, AssemblyFlags _flags, uint _publicKey, uint _name, uint _culture)
@@ -387,154 +410,276 @@ namespace Mono.Cecil.Metadata {
 
 		public void Visit (AssemblyRow row)
 		{
+			m_binaryWriter.Write ((uint) row.HashAlgId);
+			m_binaryWriter.Write (row.MajorVersion);
+			m_binaryWriter.Write (row.MinorVersion);
+			m_binaryWriter.Write (row.BuildNumber);
+			m_binaryWriter.Write (row.RevisionNumber);
+			m_binaryWriter.Write ((uint) row.Flags);
+			WriteBlobPointer (row.PublicKey);
+			WriteStringPointer (row.Name);
+			WriteStringPointer (row.Culture);
 		}
 
 		public void Visit (AssemblyOSRow row)
 		{
+			m_binaryWriter.Write (row.OSPlatformID);
+			m_binaryWriter.Write (row.OSMajorVersion);
+			m_binaryWriter.Write (row.OSMinorVersion);
 		}
 
 		public void Visit (AssemblyProcessorRow row)
 		{
+			m_binaryWriter.Write (row.Processor);
 		}
 
 		public void Visit (AssemblyRefRow row)
 		{
+			m_binaryWriter.Write (row.MajorVersion);
+			m_binaryWriter.Write (row.MinorVersion);
+			m_binaryWriter.Write (row.BuildNumber);
+			m_binaryWriter.Write (row.RevisionNumber);
+			m_binaryWriter.Write ((uint) row.Flags);
+			WriteBlobPointer (row.PublicKeyOrToken);
+			WriteStringPointer (row.Name);
+			WriteStringPointer (row.Culture);
+			WriteBlobPointer (row.HashValue);
 		}
 
 		public void Visit (AssemblyRefOSRow row)
 		{
+			m_binaryWriter.Write (row.OSPlatformID);
+			m_binaryWriter.Write (row.OSMajorVersion);
+			m_binaryWriter.Write (row.OSMinorVersion);
+			WriteTablePointer (row.AssemblyRef, typeof (AssemblyRefTable));
 		}
 
 		public void Visit (AssemblyRefProcessorRow row)
 		{
+			m_binaryWriter.Write (row.Processor);
+			WriteTablePointer (row.AssemblyRef, typeof (AssemblyRefTable));
 		}
 
 		public void Visit (ClassLayoutRow row)
 		{
+			m_binaryWriter.Write (row.PackingSize);
+			m_binaryWriter.Write (row.ClassSize);
+			WriteTablePointer (row.Parent, typeof (TypeDefTable));
 		}
 
 		public void Visit (ConstantRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.Type);
+			WriteMetadataToken (row.Parent, CodedIndex.HasConstant);
+			WriteBlobPointer (row.Value);
 		}
 
 		public void Visit (CustomAttributeRow row)
 		{
+			WriteMetadataToken (row.Parent, CodedIndex.HasCustomAttribute);
+			WriteMetadataToken (row.Type, CodedIndex.CustomAttributeType);
+			WriteBlobPointer (row.Value);
 		}
 
 		public void Visit (DeclSecurityRow row)
 		{
+			m_binaryWriter.Write ((short) row.Action);
+			WriteMetadataToken (row.Parent, CodedIndex.HasDeclSecurity);
+			WriteBlobPointer (row.PermissionSet);
 		}
 
 		public void Visit (EventRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.EventFlags);
+			WriteStringPointer (row.Name);
+			WriteMetadataToken (row.EventType, CodedIndex.TypeDefOrRef);
 		}
 
 		public void Visit (EventMapRow row)
 		{
+			WriteTablePointer (row.Parent, typeof (TypeDefTable));
+			WriteTablePointer (row.EventList, typeof (EventTable));
 		}
 
 		public void Visit (ExportedTypeRow row)
 		{
+			m_binaryWriter.Write ((uint) row.Flags);
+			m_binaryWriter.Write (row.TypeDefId);
+			WriteStringPointer (row.TypeName);
+			WriteStringPointer (row.TypeNamespace);
+			WriteMetadataToken (row.Implementation, CodedIndex.Implementation);
 		}
 
 		public void Visit (FieldRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.Flags);
+			WriteStringPointer (row.Name);
+			WriteBlobPointer (row.Signature);
 		}
 
 		public void Visit (FieldLayoutRow row)
 		{
+			m_binaryWriter.Write (row.Offset);
+			WriteTablePointer (row.Field, typeof (FieldTable));
 		}
 
 		public void Visit (FieldMarshalRow row)
 		{
+			WriteMetadataToken (row.Parent, CodedIndex.HasFieldMarshal);
+			WriteBlobPointer (row.NativeType);
 		}
 
 		public void Visit (FieldRVARow row)
 		{
+			m_binaryWriter.Write (row.RVA.Value);
+			WriteTablePointer (row.Field, typeof (FieldTable));
 		}
 
 		public void Visit (FileRow row)
 		{
+			m_binaryWriter.Write ((uint) row.Flags);
+			WriteStringPointer (row.Name);
+			WriteBlobPointer (row.HashValue);
 		}
 
 		public void Visit (GenericParamRow row)
 		{
+			m_binaryWriter.Write (row.Number);
+			m_binaryWriter.Write ((ushort) row.Flags);
+			WriteMetadataToken (row.Owner, CodedIndex.TypeOrMethodDef);
+			WriteStringPointer (row.Name);
 		}
 
 		public void Visit (GenericParamConstraintRow row)
 		{
+			WriteTablePointer (row.Owner, typeof (GenericParamTable));
+			WriteMetadataToken (row.Constraint, CodedIndex.TypeDefOrRef);
 		}
 
 		public void Visit (ImplMapRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.MappingFlags);
+			WriteMetadataToken (row.MemberForwarded, CodedIndex.MemberForwarded);
+			WriteStringPointer (row.ImportName);
+			WriteTablePointer (row.ImportScope, typeof (ModuleRefTable));
 		}
 
 		public void Visit (InterfaceImplRow row)
 		{
+			WriteTablePointer (row.Class, typeof (TypeDefTable));
+			WriteMetadataToken (row.Interface, CodedIndex.TypeDefOrRef);
 		}
 
 		public void Visit (ManifestResourceRow row)
 		{
+			m_binaryWriter.Write (row.Offset);
+			m_binaryWriter.Write ((uint) row.Flags);
+			WriteStringPointer (row.Name);
+			WriteMetadataToken (row.Implementation, CodedIndex.Implementation);
 		}
 
 		public void Visit (MemberRefRow row)
 		{
+			WriteMetadataToken (row.Class, CodedIndex.MemberRefParent);
+			WriteStringPointer (row.Name);
+			WriteBlobPointer (row.Signature);
 		}
 
 		public void Visit (MethodRow row)
 		{
+			m_binaryWriter.Write (row.RVA.Value);
+			m_binaryWriter.Write ((ushort) row.ImplFlags);
+			m_binaryWriter.Write ((ushort) row.Flags);
+			WriteStringPointer (row.Name);
+			WriteBlobPointer (row.Signature);
+			WriteTablePointer (row.ParamList, typeof (ParamTable));
 		}
 
 		public void Visit (MethodImplRow row)
 		{
+			WriteTablePointer (row.Class, typeof (TypeDefTable));
+			WriteMetadataToken (row.MethodBody, CodedIndex.MethodDefOrRef);
+			WriteMetadataToken (row.MethodDeclaration, CodedIndex.MethodDefOrRef);
 		}
 
 		public void Visit (MethodSemanticsRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.Semantics);
+			WriteTablePointer (row.Method, typeof (MethodTable));
+			WriteMetadataToken (row.Association, CodedIndex.HasSemantics);
 		}
 
 		public void Visit (MethodSpecRow row)
 		{
+			WriteMetadataToken (row.Method, CodedIndex.MethodDefOrRef);
+			WriteBlobPointer (row.Instantiation);
 		}
 
 		public void Visit (ModuleRow row)
 		{
+			m_binaryWriter.Write (row.Generation);
+			WriteStringPointer (row.Name);
+			WriteGuidPointer (row.Mvid);
+			WriteGuidPointer (row.EncId);
+			WriteGuidPointer (row.EncBaseId);
 		}
 
 		public void Visit (ModuleRefRow row)
 		{
+			WriteStringPointer (row.Name);
 		}
 
 		public void Visit (NestedClassRow row)
 		{
+			WriteTablePointer (row.NestedClass, typeof (TypeDefTable));
+			WriteTablePointer (row.EnclosingClass, typeof (TypeDefTable));
 		}
 
 		public void Visit (ParamRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.Flags);
+			m_binaryWriter.Write (row.Sequence);
+			WriteStringPointer (row.Name);
 		}
 
 		public void Visit (PropertyRow row)
 		{
+			m_binaryWriter.Write ((ushort) row.Flags);
+			WriteStringPointer (row.Name);
+			WriteBlobPointer (row.Type);
 		}
 
 		public void Visit (PropertyMapRow row)
 		{
+			WriteTablePointer (row.Parent, typeof (TypeDefTable));
+			WriteTablePointer (row.PropertyList, typeof (PropertyTable));
 		}
 
 		public void Visit (StandAloneSigRow row)
 		{
+			WriteBlobPointer (row.Signature);
 		}
 
 		public void Visit (TypeDefRow row)
 		{
+			m_binaryWriter.Write ((uint) row.Flags);
+			WriteStringPointer (row.Name);
+			WriteStringPointer (row.Namespace);
+			WriteMetadataToken (row.Extends, CodedIndex.TypeDefOrRef);
+			WriteTablePointer (row.FieldList, typeof (FieldTable));
+			WriteTablePointer (row.MethodList, typeof (MethodTable));
 		}
 
 		public void Visit (TypeRefRow row)
 		{
+			WriteMetadataToken (row.ResolutionScope, CodedIndex.ResolutionScope);
+			WriteStringPointer (row.Name);
+			WriteStringPointer (row.Namespace);
 		}
 
 		public void Visit (TypeSpecRow row)
 		{
+			WriteBlobPointer (row.Signature);
 		}
 
 		public void Terminate (RowCollection coll)
