@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Thu Jul 14 14:17:17 CEST 2005
+ * Fri Jul 29 12:05:46 CEST 2005
  *
  *****************************************************************************/
 
@@ -24,12 +24,14 @@ namespace Mono.Cecil.Metadata {
 		private MetadataRoot m_metadataRoot;
 		private TablesHeap m_heap;
 		private MetadataRowWriter m_mrrw;
+		private BinaryWriter m_binaryWriter;
 
 		public MetadataTableWriter (MetadataWriter mrv)
 		{
 			m_metadataRoot = mrv.GetMetadataRoot ();
 			m_heap = m_metadataRoot.Streams.TablesHeap;
 			m_mrrw = new MetadataRowWriter (this);
+			m_binaryWriter = mrv.GetWriter ();
 		}
 
 		public MetadataRoot GetMetadataRoot ()
@@ -40,6 +42,11 @@ namespace Mono.Cecil.Metadata {
 		public IMetadataRowVisitor GetRowVisitor ()
 		{
 			return m_mrrw;
+		}
+
+		public BinaryWriter GetWriter ()
+		{
+			return m_binaryWriter;
 		}
 
 		public AssemblyTable GetAssemblyTable ()
